# click-config

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package-testing.yml
examples/: simple.py
src/click_config/: __init__.py  core.py  util.py
tests/: conftest.py  test_basic_example.py  test_config_class_decorator.py  test_experiment_series.py  test_read_write.py
